updated template to contain the email sending/recipient data

--- a/Open-ILS/examples/hold_notification_template.example
+++ b/Open-ILS/examples/hold_notification_template.example
@@ -1,6 +1,9 @@
-# --------------------------------------------------------------------
-# Test comments..
-# --------------------------------------------------------------------
+To: ${EMAIL_RECIPIENT}
+From: ${EMAIL_SENDER}
+Reply-To: ${EMAIL_REPLY_TO}
+Subject: Hold Notification
+${EMAIL_HEADERS}
+
 
 ${DATE}
 
