--- a/Open-ILS/xul/staff_client/Makefile
+++ b/Open-ILS/xul/staff_client/Makefile
@@ -69,12 +69,14 @@ generated:
 
 open-ils:
 	@echo
-	@echo '********************************************************* Grabbing more OPAC code and legacy code '
+	@echo '********************************************************* Grabbing more OPAC code and legacy code and custom code'
 	cp ../../../OpenSRF/src/javascript/*.js build/chrome/content/OpenSRF/
 	cp ../../../Open-ILS/web/opac/common/js/*.js build/chrome/content/OpenILS/util/
 	cp ../../../Evergreen/staff_client/chrome/content/evergreen/cat/marc* build/chrome/content/legacy/
 	cp ../../../Evergreen/staff_client/chrome/content/evergreen/cat/browse* build/chrome/content/legacy/
 	cp ../../../Evergreen/staff_client/chrome/locale/en-US/evergreen/cat.dtd build/chrome/locale/en-US/
+	cp -R ../../../Evergreen/xul/staff_client/server/ build/
+	external/prune_dirs.sh build/
 	find build/chrome/content/legacy/ -type f -name '*.*' -exec sed -i s/evergreen/open_ils_staff_client/g {} \;
 
 custom:
