added install logic to copy over the admin "project"

--- a/Open-ILS/src/Makefile
+++ b/Open-ILS/src/Makefile
@@ -43,7 +43,6 @@ mod_xmlent-install:
 	@echo $@
 	make -C apachemods mod_xmlent-install
 
-
 client-xul:
 	@echo $@
 	@echo "Building staff client"
@@ -62,9 +61,10 @@ server-xul:
 webcore-install:
 	@echo $@
 	echo "Copying web into $(WEBDIR)"
+	mkdir -p $(ADMINDIR)
+	cp -r ../admin/* $(ADMINDIR)
 	mkdir -p $(WEBDIR)
 	mkdir -p $(WEBDIR)/opac/extras/xsl/
-	mkdir -p $(WEBDIR)/opac/extras/slimpac/
 	cp -r ../web/* $(WEBDIR)
 	ln -sf $(WEBDIR)/opac/skin/default/xml/index.xml $(WEBDIR)/opac/skin/default/xml/mresult.xml
 	ln -sf $(WEBDIR)/opac/skin/default/xml/index.xml $(WEBDIR)/opac/skin/default/xml/rresult.xml
@@ -74,9 +74,9 @@ webcore-install:
 	ln -sf $(WEBDIR)/opac/skin/default/xml/index.xml $(WEBDIR)/opac/skin/default/xml/cnbrowse.xml
 	cp ../xul/staff_client/chrome//content//util/date.js $(WEBDIR)/opac/common/js/
 	cp ../xsl/*.xsl $(WEBDIR)/opac/extras/xsl/
-#	cp ../slimpac/*.html $(WEBDIR)/opac/extras/slimpac/
 	ln -sf $(ETCDIR)/fm_IDL.xml $(WEBDIR)/reports/
 	cp ../xul/staff_client/server/admin/adminlib.js $(WEBDIR)/reports/
+	mkdir -p $(WEBDIR)/opac/extras/slimpac/
 	
 
 libfieldmapper:	
