--- a/Open-ILS/src/extras/Makefile
+++ b/Open-ILS/src/extras/Makefile
@@ -1,9 +1,10 @@
-LDLIBS += -lreadline -loils_utils -lopensrf -lobjson -lxml2 -lfieldmapper
+LDLIBS += -lreadline -loils_utils -lopensrf -lobjson -lxml2 -loils_idl
 all:	oils_requestor
 
 oils_requestor:	oils_requestor.o
 oils_requestor-install:
 	cp oils_requestor $(BINDIR)
+
 oils_requestor.o:	oils_requestor.c
 
 clean:
