updated some wording

--- a/Open-ILS/examples/apache/eg.conf
+++ b/Open-ILS/examples/apache/eg.conf
@@ -120,7 +120,8 @@ NameVirtualHost *:443
 	SSLEngine on
 	SSLCipherSuite ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:+eNULL
 
-    # Create self-signed certificate and key with and put them into SERVER_ROOT/ssl/:
+    # If you don't have an SSL cert, you can create self-signed 
+    # certificate and key with:
     # openssl req -new -x509 -nodes -out server.crt -keyout server.key
 	SSLCertificateFile ssl/server.crt
 	SSLCertificateKeyFile ssl/server.key
