augmenting instead of overrideing CFLAGS and LDLIBS

--- a/Open-ILS/src/Makefile
+++ b/Open-ILS/src/Makefile
@@ -1,7 +1,7 @@
 
 export TMPDIR			= $(TMP)/opensrf
-export LDFLAGS			= -L $(TMPDIR) -L .
-export CFLAGS			= -pipe -g -Wall -O2 -fPIC -I$(LIBXML2_HEADERS) -I$(APACHE2_HEADERS) -I$(APR_HEADERS) \
+export LDFLAGS			+= -L $(TMPDIR) -L .
+export CFLAGS			+= -pipe -g -Wall -O2 -fPIC -I$(LIBXML2_HEADERS) -I$(APACHE2_HEADERS) -I$(APR_HEADERS) \
 								-I$(LIBXML2_HEADERS)/libxml  -I$(TMP) -I$(TMPDIR)
 
 export INCDIR = "$(INCLUDEDIR)/openils/"
