--- a/Open-ILS/src/Makefile
+++ b/Open-ILS/src/Makefile
@@ -134,12 +134,12 @@ perl-install:
 
 reporter-install:
 	@echo $@
-	@echo "Installing Reporter templates to $(REPORTERDIR) and example configs to $(ETCDIR)"
-	cp reporter/report_base.example.xml $(ETCDIR)/reporter.example.xml
-	cp reporter/tables.example.xml $(ETCDIR)
-	cp reporter/widgets.example.xml $(ETCDIR)
-	mkdir -p $(REPORTERDIR)
-	cp -r reporter/templates/* $(REPORTERDIR)
+#	@echo "Installing Reporter templates to $(REPORTERDIR) and example configs to $(ETCDIR)"
+#	cp reporter/report_base.example.xml $(ETCDIR)/reporter.example.xml
+#	cp reporter/tables.example.xml $(ETCDIR)
+#	cp reporter/widgets.example.xml $(ETCDIR)
+#	mkdir -p $(REPORTERDIR)
+#	cp -r reporter/templates/* $(REPORTERDIR)
 
 # -----------------------------------------------------------------------------------
 offline-install:
