defaulting to false for hold email notices

--- a/Open-ILS/examples/openils.xml.example
+++ b/Open-ILS/examples/openils.xml.example
@@ -359,7 +359,7 @@ Example opensrf config file for OpenILS
                 </unix_config>
                 <app_settings>
                     <notify_hold>
-                        <email>true</email>
+                        <email>false</email> <!-- set to true for hold notice emails -->
                     </notify_hold>
 
                     <!-- circulation policy scripts -->
