--- a/Open-ILS/examples/apache/eg.conf
+++ b/Open-ILS/examples/apache/eg.conf
@@ -128,6 +128,12 @@ NameVirtualHost *:443
 
     # - absorb the shared virtual host settings
     Include eg_vhost.conf
+
+    # help IE along with SSL pages
+    BrowserMatch ".*MSIE.*" \
+        nokeepalive ssl-unclean-shutdown \
+        downgrade-1.0 force-response-1.0
+
 </VirtualHost>
 
 
