--- a/Open-ILS/src/Makefile
+++ b/Open-ILS/src/Makefile
@@ -122,7 +122,7 @@ perl-install:
 	mkdir -p $(BINDIR)
 	cp extras/ils_events.xml $(DATADIR)
 	cp -r perlmods/* $(PERLDIR)
-	cp ../examples/openils.xml.example $(ETCDIR)
+	cp ../examples/opensrf.xml.example $(ETCDIR)
 	cp ../examples/fm_IDL.xml $(ETCDIR)
 	cp ../examples/oils_sip.xml.example $(ETCDIR)
 	cp ../examples/hold_notification_template.example $(DATADIR)
