added an example lib ips file.  removed evergreen_core from the default config since that target has become the de facto PINES stuff (needs to change, obviously)

--- a/Open-ILS/src/Makefile
+++ b/Open-ILS/src/Makefile
@@ -127,6 +127,7 @@ perl-install:
 	cp ../examples/oils_sip.xml.example $(ETCDIR)
 	cp ../examples/hold_notification_template.example $(DATADIR)
 	cp ../examples/oils_ctl.sh $(BINDIR)
+	cp ../examples/lib_ips.txt.example $(ETCDIR)
 	mkdir -p $(TEMPLATEDIR)
 	cp -r templates/marc $(TEMPLATEDIR)
 
