enabling LoC Z server by default

--- a/Open-ILS/examples/opensrf.xml.example
+++ b/Open-ILS/examples/opensrf.xml.example
@@ -76,6 +76,26 @@ Example opensrf config file for OpenILS
         <z3950>
             <default>oclc</default>
             <services>
+
+                <loc>
+                    <!-- LoC does not require username/password -->
+                    <name>loc</name>
+                    <host>z3950.loc.gov</host>
+                    <port>7090</port>
+                    <db>Voyager</db>
+                    <attrs>
+                        <tcn><code>12</code><format>1</format></tcn>
+                        <isbn><code>7</code><format>6</format></isbn>
+                        <lccn><code>9</code><format>1</format></lccn>
+                        <author><code>1003</code><format>6</format></author>
+                        <title><code>4</code><format>6</format></title>
+                        <issn><code>8</code><format>1</format></issn>
+                        <publisher><code>1018</code><format>6</format></publisher>
+                        <pubdate><code>31</code><format>1</format></pubdate>
+                        <item_type><code>1001</code><format>1</format></item_type>
+                    </attrs>
+                </loc>
+
                 <oclc>
                     <!-- Z3950 settings for OCLC.  Note that OCLC requires username/password -->
                     <host>zcat.oclc.org</host>
@@ -87,8 +107,6 @@ Example opensrf config file for OpenILS
                             http://www.loc.gov/z3950/agency/defns/bib1.html
                             <code> is the "use attribute", <format> is the "structure attribute"
                             This just puts some friendly names on the data.
-                            Just copy this chunk to the <attrs> section of <loc> and 
-                            uncomment the chunk to use the LoC Z server instead
                         -->
                         <tcn><code>12</code><format>1</format></tcn>
                         <isbn><code>7</code><format>6</format></isbn>
@@ -101,17 +119,6 @@ Example opensrf config file for OpenILS
                         <item_type><code>1001</code><format>1</format></item_type>
                     </attrs>
                 </oclc>
-
-                <!--
-                <loc>
-                    <name>loc</name>
-                    <host>z3950.loc.gov</host>
-                    <port>7090</port>
-                    <db>Voyager</db>
-                    <attrs>
-                    </attrs>
-                </loc>
-                -->
 
             </services>
         </z3950>
