--- a/Open-ILS/examples/opensrf.xml.example
+++ b/Open-ILS/examples/opensrf.xml.example
@@ -126,10 +126,12 @@ Example opensrf config file for OpenILS
 
         <added_content>
             <!-- configure an added content plugin -->
-            <module>OpenILS::WWW::AddedContent::Syndetic</module>
+            <!--
+            <module>OpenILS::WWW::AddedContent::MY_MODULE</module>
             <userid>MY_USER_ID</userid>
-            <base_url>http://syndetics.com/index.aspx</base_url>
+            <base_url>MY_BASE_URL</base_url>
             <timeout>2</timeout>
+            -->
         </added_content>
 
 
